# MyArtverse

./: .env.example  .env.local.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  .prettierrc.json  .vercelignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TODO.md  app.vue  forceUpdateDeps.mjs  forceUpdateDeps.ts  knip.config.ts  kuro-api.json  mf-user-res.jsonc  mf-user-rss.xml  next.config.js  nuxt.config.ts  package.json  scaffold.mjs  tailwind.config.js  tsconfig.json  turbo.json  vercel.json
.github/: CODEOWNERS
.github/workflows/: dependabot.yml  deps-and-build.yml  lint-and-ts-check.yml  pr-lint.yml
.husky/: pre-commit
@types/: app.d.ts  index.d.ts
api/: package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: index.ts
apps/api/: .gitignore  README.md  package.json  tsconfig.json
apps/client/: .eslintrc.json  .gitignore  index.html  next.config.js  package.json  postcss.config.js  (+3 more)
apps/desktop/src-tauri/: Cargo.toml
codemod/: fixImports.ts  updatePkgs.ts
components/: Button.vue  Container.vue  NavbarSearchBox.vue  SearchComponent.vue  TheBaseFooter.vue  TheBaseNavbar.vue  UserLoggedIn.vue  UserLoggedOut.vue
layouts/: default.vue
pages/: index.vue
public/: manifest.json  manifest.webmanifest  sw.js  sw.js.map
scripts/: forceUpdateDeps.ts  scaffold.mjs
stores/: index.ts
website/: .gitignore  app.vue  declarations.d.ts  next.config.js  nuxt.config.ts  package.json  tailwind.config.js  tsconfig.json
(+656 files in other folders)
