[package]
name = "myfursona-client"
version = "0.0.0"
description = "The MyFursona client"
authors = ["Kerby Keith Aquino"]
license = "Apache-2.0"
repository = "https://github.com/MyFursona-Project/MyFursona"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "window-set-title", "clipboard-all", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
